@startuml FelineFinder

skinparam packageStyle rectangle
allow_mixing

package source {   
    package "cat" {
        package "entities" {
            class Cat
            class CatListing
        }
    }

    
    package "provider" {
        package "entities" {
            interface CatListingProvider

            CatListingProvider --> CatListing
            CatListingProvider --> Cat
        }

        package "infrastructure" {
            class SafeHavenScraper

            SafeHavenScraper --|> CatListingProvider
        }
    }

    package "repository" {
        package "entities" {
            interface CatRepository
            interface CatImageRepository

            CatRepository --> Cat
            CatImageRepository --> Cat
        }

        package "infrastructure" {
            class PolarsCatRepository
            class FilesystemImageRepository

            PolarsCatRepository --|> CatRepository
            FilesystemImageRepository --|> CatImageRepository
        }
    }

    package "alerts"{
        package "entities" {
            interface AlertSender
        }

        package "usecases" {
            class FilteredAlertSender
            component filters       

            FilteredAlertSender --> AlertSender
            FilteredAlertSender --> filters
        }

        package "infrastructure" {
            class DummyAlertSender

            DummyAlertSender --|> AlertSender
        }
    }

    package "monitoring" {
        package "usecases" {
            component tracking
            tracking --> CatListing
            tracking --> CatRepository
        }

        package "adapters" {
            class CatMonitor
            CatMonitor --> tracking
            CatMonitor --> AlertSender
            CatMonitor --> CatListingProvider
            CatMonitor --> CatRepository
            CatMonitor --> CatImageRepository
            CatMonitor --> AlertSender
        }
    }
}

package "app" {
  component main

    main --> CatMonitor
    main --> FilesystemImageRepository
    main --> PolarsCatRepository
    main --> SafeHavenScraper
}



@enduml
